www/css/index.css
#rulesTable .handle {
    width: 35px;
    background: no-repeat center/40% url(../img/grip-handle.svg);
    cursor: move;
}
#rulesTable .isDragged > td {
    background-color: rgba(152, 152, 152, 0.5);
    transition: 0.3s;
}
#rulesTable td {
    vertical-align: middle;
}
#rulesTable input {
    width: 100%;
}
#rulesTable tr td:nth-child(2), #rulesTable tr th:nth-child(2) {
    font-weight: bold;
    text-align: center;
    width: 46px;
}
#rulesTable tr td:nth-child(4) {
    width: 50px;
}
#rulesTable .index {
    text-align: center;
}
#currentChain input {
    width: 250px;
    display: inline;
}
#currentChainDefaultPolicy select {
    display: inline;
    width: 100px;
}
#currentChainDefaultPolicy, #saveChainToggle, label[for="saveChainToggle"] {
    font-size: 1.1rem;
}

.checkbox-info:checked {
    background-color: var(--bs-info);
    border-color: var(--bs-info);
}
.input-dark {
    background-color: #4b4b4b;
    color: white;
    --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23dee2e6' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
}
.input-dark:focus {
    border-color: #505b64;
}
.input-sm {
    padding: 1px 4px;
}
.transparentDeleteBtn {
    background: no-repeat center url(../img/trash.svg);
    width: 14px;
    margin: 0 2px;
}
.transparentEditBtn {
    background: no-repeat center url(../img/edit.svg);
    width: 16px;
    margin: 0 2px;
}
.transparentCreateBtn {
    background: no-repeat center url(../img/create.svg);
    width: 20px;
    margin: 0 2px;
}
.btn-transparent {
    border: 0;
    outline: 0;
}
.curs-pointer {
    cursor: pointer;
}
.hl-color-not {
    color: #f13e4a;
}
.hl-color-ip {
    color: #a347b4;
}
.hl-color-if {
    color: #2aa0ac;
}
.hl-color-tcp {
    color: #d19360;
}
.hl-link {
    color: #2a7ce0;
    cursor: pointer;
}
.hl-link:hover {
    text-decoration: underline;
}

